Added all logic and controller to interact with postman requests